--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.11.1</version>
 				<configuration>
 					<excludes>
 						<exclude>
